--- a/index.html
+++ b/index.html
@@ -7,28 +7,27 @@
     <title>Document</title>
 </head>
 <body>    
-
     <h1>Sena</h1>
     <h3>Hakkımda</h3>
     <p>Merhaba, ben Sena. Kitap okumayı, film ve dizi izlemeyi severim.</p>
     <h4>İlgi Alanlarım
         <ol>
             <li>Film
-                <ul>
+                <ul style="list-style-type: circle">
                     <li>Tenet</li>
                     <li>Parasite</li>
                     <li>Inception</li>
                 </ul>
             </li>
             <li>Dizi
-                <ul>
+                <ul style="list-style-type: circle">
                     <li>The Office</li>
                     <li>Ozark</li>
                     <li>Snowpiercer</li>
                 </ul>
             </li>
             <li>Kitap
-                <ul>
+                <ul style="list-style-type: circle">
                     <li>A Clockwork Orange</li>
                     <li>1984</li>
                     <li>Animal Farm</li>
@@ -40,7 +39,7 @@
     <h2>Sevdiğim Diziler</h2>
     <h3>The Office</h3>
     <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQW9OrnFbAGxGUqSCY0udN5KykcDQxqmgmI8Q&usqp=CAU" alt="The Office">
-    <p>Dizi, Dunder Mifflin adındaki bir kâğıt şirketinin Scranton şubesinin ofisinde yaşananları konu almaktadır.</p>
+    <p>Dizi, <span style="color: red; font-weight: bold">Dunder Mifflin</span>  adındaki bir kâğıt şirketinin Scranton şubesinin ofisinde yaşananları konu almaktadır.</p>
     <a href="https://www.imdb.com/title/tt0386676/">IMDB: The Office</a>
     <h2>Sevdiğim Kitaplar</h2>
     <h3>1984</h3>
@@ -48,7 +47,7 @@
     <p> <strong>Bin Dokuz Yüz Seksen Dört</strong>, <em>George Orwell</em> tarafından kaleme alınmış alegorik bir politik romandır.
         Hikâyesi distopik bir dünyada geçer. Distopya romanlarının ünlülerindendir. 
         Özellikle kitapta tanımlanan <strong>Big Brother</strong> kavramı günümüzde de sıklıkla kullanılmaktadır.
-        Aynı zamanda kitapta geçen "düşünce polisi" gibi kavramları da George Orwell günümüze kazandırmıştır.</p>
+        Aynı zamanda kitapta geçen <span style="color: green;font-style: italic;">"düşünce polisi"</span> gibi kavramları da George Orwell günümüze kazandırmıştır.</p>
     <a href="https://www.goodreads.com/book/show/40961427-1984?from_search=true&from_srp=true&qid=fHOp3np0tJ&rank=1">GoodReads: 1984</a>
 </body>
 </html>
