--- a/CalismaCSS/contact.html
+++ b/CalismaCSS/contact.html
@@ -15,7 +15,7 @@
             <a href="contact.html">İletişim</a>
         </ul>
     </div>
-    <div class="contact">
+    <div class="contacts">
         <address>Adres: Bornova/Izmir</address><br>
         <a href="mailto:abcdef@gmail.com">Mail</a><br>
         <a href="tel:0123456789">Telephone Number</a>
