--- a/CalismaCSS/index.html
+++ b/CalismaCSS/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <div class="contacts">
+    <div id="links">
         <ul>
             <a href="index.html">Anasayfa</a><br>
             <a href="books.html">Kitaplar</a><br>
